<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">MediaTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="remote_addr">请输入远程地址</string>
    <string name="server1">服务器1</string>
    <string name="server2">服务器2</string>
    <string name="closeser">关闭服务</string>
    <string name="innernet">内网地址:</string>
    <string name="outernet">外网地址</string>
    <string name="ip_addr">地址</string>
    <string name="port_addr">端口</string>
    <string name="network">网络</string>
    <string name="audio_send">音频发送</string>
    <string name="audio_recv">音频接收</string>
    <string name="audio_stop">停止</string>
    <string name="audio_sending">发送中</string>
    <string name="audio_recving">接收中</string>
    <string name="audio">音频</string>
    <string name="recv_send">接收发送</string>
    <string name="video_test">视频测试</string>
    <string name="video">视频</string>
    <string name="file_encode">文件编码</string>
    <string name="file_decode">文件解码</string>
    <string name="video_encode">视频编码</string>
    <string name="video_decode">视频解码</string>
    <string name="video_encode_send">编码发送</string>
    <string name="video_decode_recv">解码接收</string>
    <string name="video_self_test">视频测试</string>
    
</resources>
