<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24dip"
            android:text="@string/audio">
  </TextView>

                  <LinearLayout
                android:id="@+id/addrlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="80dip" 
                >
			    <EditText   
			        android:id="@+id/remoteAddr"
				    android:layout_width="120dip"  
				    android:layout_height="36dip"  
				    android:layout_marginBottom="20dip"  
				    android:textColorHint="#AAAAAA"
				    android:textColor="#FFFFFF"
				    android:textSize="15dip"  
				    android:singleLine="true"  
				    android:hint="@string/remote_addr"
					android:digits="1234567890."
				/>
			    </LinearLayout>
			    
                <LinearLayout
                android:id="@+id/sendlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/addrlayout"
                android:layout_marginTop="0dip"  
                >

                <Button 
		        android:id="@+id/btnAudioSend"
		        android:layout_below="@id/remoteAddr"
		        android:layout_width="120dip"
		        android:layout_height="wrap_content"
		        android:text="@string/audio_send"
		        android:textColor="@drawable/textselector"
		        >             
    			</Button>
    			
                <TextView
                    android:id="@+id/sendTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_stop"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>
    

                <LinearLayout
                android:id="@+id/recvlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/sendlayout"
                >

			    <Button
			        android:id="@+id/btnAudioRecv"
			        android:layout_width="120dip"
			        android:layout_height="wrap_content"
			        android:text="@string/audio_recv"
			        android:textColor="@drawable/textselector"
			        >
			    </Button>
			    
                <TextView
                    android:id="@+id/recvTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_stop"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>
            	
                <LinearLayout
                android:id="@+id/videolayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/recvlayout"
                android:layout_marginTop="20dip" 
                >

			    <Button
			        android:id="@+id/btnAudioAll"
			        android:layout_width="120dip"
			        android:layout_height="wrap_content"
			        android:text="@string/video_test"
			        android:textColor="@drawable/textselector"
			        >
			    </Button>
    			
                <TextView
                    android:id="@+id/videoTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>
            	
  </LinearLayout>