<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24dip"
            android:text="@string/video">
  </TextView> 

  
      <SurfaceView
        android:id="@+id/sfv_video"
        android:layout_width="320dp	"
        android:layout_height="240dp" />
      
                  <LinearLayout
                android:id="@+id/encodelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/recvlayout"
                android:layout_marginTop="20dip" 
                >

			    <Button
			        android:id="@+id/btnVideoEncode"
			        android:layout_width="120dip"
			        android:layout_height="wrap_content"
			        android:text="@string/video_encode"
			        android:textColor="@drawable/textselector"
			        >
			    </Button>
    			
                <TextView
                    android:id="@+id/videoTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>
            	
                <LinearLayout
                android:id="@+id/decodelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/sendlayout"
                >
			    <Button
			        android:id="@+id/btnVideoDecode"
			        android:layout_width="120dip"
			        android:layout_height="wrap_content"
			        android:text="@string/video_decode"
			        android:textColor="@drawable/textselector"
			        >
			    </Button>
			    
                <TextView
                    android:id="@+id/recvTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_stop"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>
                
  </LinearLayout>