<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
              
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24dip"
            android:text="@string/network">
  </TextView>

                <LinearLayout
                android:id="@+id/locallayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"  
                >
                <TextView
                    android:id="@+id/localTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginLeft="30dip"  
                    android:text="@string/innernet"
                    android:textColor="@color/white"
                    android:textSize="15dip" 
                />
                <TextView
                    android:id="@+id/localIp"
                    android:layout_marginLeft="20dip" 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15dip" 
                />
            	</LinearLayout>
  
         <LinearLayout
         android:id="@+id/addrlayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dip" 
         >
         <Button 
	        android:id="@+id/btnServer1"
	        android:layout_below="@id/remoteAddr"
	        android:layout_width="100dip"
	        android:layout_height="wrap_content"
	        android:text="@string/server1"
	        android:textColor="@drawable/textselector"
	        >             
   		</Button>
	    <EditText   
	        android:id="@+id/serverAddr1"
		    android:layout_width="150dip"  
		    android:layout_height="36dip"  
		    android:layout_marginBottom="20dip"  
		    android:textColorHint="#AAAAAA"
		    android:textColor="#FFFFFF"
		    android:textSize="15dip"  
		    android:singleLine="true"  
		    android:hint="@string/ip_addr"
		    android:inputType="number"
			android:digits="1234567890."
		/>
	    	<EditText   
	        android:id="@+id/serverPort1"
		    android:layout_width="80dip"  
		    android:layout_height="36dip"  
		    android:layout_marginBottom="20dip"  
		    android:textColorHint="#AAAAAA"
		    android:textColor="#FFFFFF"
		    android:textSize="15dip"  
		    android:singleLine="true"  
		    android:hint="@string/port_addr"
		    android:inputType="number"
			android:digits="1234567890"
		/>

	    </LinearLayout>
		
                <LinearLayout
                android:id="@+id/stiplayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/addrlayout"
                android:layout_marginTop="0dip"  
                >
                <TextView
                    android:id="@+id/server1Tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outernet"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>
         
        <LinearLayout
         android:id="@+id/addrlayout1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dip" 
         >
         <Button 
	        android:id="@+id/btnServer2"
	        android:layout_below="@id/remoteAddr"
	        android:layout_width="100dip"
	        android:layout_height="wrap_content"
	        android:text="@string/server2"
	        android:textColor="@drawable/textselector"
	        >             
   		</Button>
	    <EditText   
	        android:id="@+id/serverAddr2"
		    android:layout_width="150dip"  
		    android:layout_height="36dip"  
		    android:layout_marginBottom="20dip"  
		    android:textColorHint="#AAAAAA"
		    android:textColor="#FFFFFF"
		    android:textSize="15dip"  
		    android:singleLine="true"  
		    android:hint="@string/ip_addr"
		    android:inputType="number"
			android:digits="1234567890."
		/>
	    	<EditText   
	        android:id="@+id/serverPort2"
		    android:layout_width="80dip"  
		    android:layout_height="36dip"  
		    android:layout_marginBottom="20dip"  
		    android:textColorHint="#AAAAAA"
		    android:textColor="#FFFFFF"
		    android:textSize="15dip"  
		    android:singleLine="true"  
		    android:hint="@string/port_addr"
		    android:inputType="number"
			android:digits="1234567890"
		/>

	    </LinearLayout>
        
                <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/addrlayout1"
                >
                <TextView
                    android:id="@+id/server2Tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outernet"
                    android:textColor="@color/red" 
                />
            	</LinearLayout>

        <LinearLayout
         android:id="@+id/remoteLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dip" 
         >
         <Button 
	        android:id="@+id/btnClose"
	        android:layout_below="@id/remoteAddr"
	        android:layout_width="100dip"
	        android:layout_height="wrap_content"
	        android:text="@string/closeser"
	        android:textColor="@drawable/textselector"
	        >             
   		</Button>
	    <EditText   
	        android:id="@+id/remoteAddr"
		    android:layout_width="150dip"  
		    android:layout_height="36dip"  
		    android:layout_marginBottom="20dip"  
		    android:textColorHint="#AAAAAA"
		    android:textColor="#FFFFFF"
		    android:textSize="15dip"  
		    android:singleLine="true"  
		    android:hint="@string/ip_addr"
		    android:inputType="number"
			android:digits="1234567890."
		/>
	    	<EditText   
	        android:id="@+id/remotePort"
		    android:layout_width="80dip"  
		    android:layout_height="36dip"  
		    android:layout_marginBottom="20dip"  
		    android:textColorHint="#AAAAAA"
		    android:textColor="#FFFFFF"
		    android:textSize="15dip"  
		    android:singleLine="true"  
		    android:hint="@string/port_addr"
		    android:inputType="number"
			android:digits="1234567890"
		/>

	    </LinearLayout>    
                	
  </LinearLayout>
  
